--- a/src/main/resources/assets/spartanfire/lang/en_us.lang
+++ b/src/main/resources/assets/spartanfire/lang/en_us.lang
@@ -23,12 +23,12 @@ item.witherbone_pole.name=Witherbone Pole
 item.spartanfire:glaive_custom.name=%s Glaive
 item.spartanfire.quarterstaff_custom.name=%s Quarterstaff
 
-tooltip.spartanfire:fire_dragonbone=Ignites and knocks back targets, deals extra damage to ice dragons.
-tooltip.spartanfire:ice_dragonbone=Slows and knocks back targets, deals extra damage to fire dragons.
-tooltip.spartanfire:jungle=Extra Damage to non-arthropods and deathworms.
-tooltip.spartanfire:desert=Extra Damage to non-arthropods and deathworms.
-tooltip.spartanfire:jungle_venom=Poisons on hit.
-tooltip.spartanfire:desert_venom=Poisons on hit.
+tooltip.spartanfire:fire_dragonbone=Ignites and knocks back targets, deals extra damage to ice dragons
+tooltip.spartanfire:ice_dragonbone=Slows and knocks back targets, deals extra damage to fire dragons
+tooltip.spartanfire:jungle=+4 damage against non-arthropods and deathworms
+tooltip.spartanfire:desert=+4 damage against non-arthropods and deathworms
+tooltip.spartanfire:jungle_venom=Poisons on hit
+tooltip.spartanfire:desert_venom=Poisons on hit
 
 #Materials
 material.spartanfire:dragonbone=Dragonbone
