--- a/src/main/resources/assets/spartanfire/lang/en_us.lang
+++ b/src/main/resources/assets/spartanfire/lang/en_us.lang
@@ -4,6 +4,7 @@ item.spartanfire:dagger_custom.name=%s Dagger
 item.spartanfire:parrying_dagger_custom.name=%s Parrying Dagger
 item.spartanfire:longsword_custom.name=%s Longsword
 item.spartanfire:katana_custom.name=%s Katana
+item.spartanfire:scythe_custom.name=%s Scythe
 item.spartanfire:saber_custom.name=%s Saber
 item.spartanfire:rapier_custom.name=%s Rapier
 item.spartanfire:greatsword_custom.name=%s Greatsword
