--- a/src/main/resources/assets/spartanfire/lang/es_mx.lang
+++ b/src/main/resources/assets/spartanfire/lang/es_mx.lang
@@ -5,6 +5,7 @@ item.spartanfire:dagger_custom.name=Daga de %s
 item.spartanfire:parrying_dagger_custom.name=Daga rechazadora de %s
 item.spartanfire:longsword_custom.name=Espada larga de %s
 item.spartanfire:katana_custom.name=Katana de %s
+item.spartanfire:scythe_custom.name=Guadana de %s
 item.spartanfire:saber_custom.name=Sable de %s
 item.spartanfire:rapier_custom.name=Estoque de %s
 item.spartanfire:greatsword_custom.name=Gran espada de %s
